@@ -9,8 +9,8 @@ import com.sprint.mission.discodeit.service.ChannelService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.Instant;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service("jcfChannelService")
 @RequiredArgsConstructor
@@ -19,57 +19,43 @@ public class JCFChannelService implements ChannelService {
     private final ChannelRepository channelRepository;
 
     @Override
-    public void createPublicChannel(ChannelCreateDTO channelCreateDTO) {
+    public ChannelDTO createChannel(ChannelCreateDTO channelCreateDTO) {
         Channel channel = new Channel(
                 UUID.randomUUID(),
                 channelCreateDTO.getName(),
                 channelCreateDTO.getDescription(),
                 channelCreateDTO.getCreatorId(),
-                false
+                false,
+                Instant.now(),
+                new ArrayList<>()
         );
         channelRepository.save(channel);
-    }
-
-    @Override
-    public void createPrivateChannel(UUID creatorId, List<UUID> members) {
-        Channel channel = new Channel(
-                UUID.randomUUID(),
-                "Private Channel",
-                "Private Channel for users",
-                creatorId,
-                true
-        );
-        channel.setMembers(members);
-        channelRepository.save(channel);
+        return convertToDTO(channel);
     }
 
     @Override
     public List<ChannelDTO> readAll() {
         return channelRepository.findAll().stream()
-                .map(channel -> new ChannelDTO(
-                        channel.getId(),
-                        channel.getName(),
-                        channel.getDescription(),
-                        channel.getCreatorId(),
-                        channel.isPublic(),
-                        channel.getCreatedAt(),
-                        channel.getMembers()
-                ))
-                .collect(Collectors.toList());
+                .map(this::convertToDTO)
+                .toList();
     }
 
     @Override
     public Optional<ChannelDTO> read(UUID channelId) {
         return channelRepository.findById(channelId)
-                .map(channel -> new ChannelDTO(
-                        channel.getId(),
-                        channel.getName(),
-                        channel.getDescription(),
-                        channel.getCreatorId(),
-                        channel.isPublic(),
-                        channel.getCreatedAt(),
-                        channel.getMembers()
-                ));
+                .map(this::convertToDTO);
+    }
+
+    @Override
+    public void update(UUID channelId, ChannelUpdateDTO channelUpdateDTO) {
+        channelRepository.findById(channelId).ifPresent(channel -> {
+            if (channel.isPrivate()) {
+                throw new IllegalArgumentException("비공개 채널은 수정할 수 없습니다.");
+            }
+            channel.setName(channelUpdateDTO.getName());
+            channel.setDescription(channelUpdateDTO.getDescription());
+            channelRepository.save(channel);
+        });
     }
 
     @Override
@@ -77,41 +63,23 @@ public class JCFChannelService implements ChannelService {
         channelRepository.deleteById(channelId);
     }
 
-    // ✅ 채널 정보 수정 메서드 추가
-    @Override
-    public void update(UUID channelId, ChannelUpdateDTO channelUpdateDTO) {
-        Optional<Channel> optionalChannel = channelRepository.findById(channelId);
-
-        if (optionalChannel.isPresent()) {
-            Channel channel = optionalChannel.get();
-
-            // ❌ 비공개 채널 수정 불가
-            if (channel.isPrivate()) {
-                throw new IllegalArgumentException("비공개 채널은 수정할 수 없습니다.");
-            }
-
-            channel.setName(channelUpdateDTO.getName());
-            channel.setDescription(channelUpdateDTO.getDescription());
-            channelRepository.save(channel);
-        } else {
-            throw new NoSuchElementException("해당 ID의 채널을 찾을 수 없습니다.");
-        }
-    }
-
-    // ✅ 특정 사용자가 볼 수 있는 채널 목록 조회 메서드 추가
     @Override
     public List<ChannelDTO> getChannelsForUser(UUID userId) {
         return channelRepository.findAll().stream()
                 .filter(channel -> channel.isPublic() || channel.getMembers().contains(userId))
-                .map(channel -> new ChannelDTO(
-                        channel.getId(),
-                        channel.getName(),
-                        channel.getDescription(),
-                        channel.getCreatorId(),
-                        channel.isPublic(),
-                        channel.getCreatedAt(),
-                        channel.getMembers()
-                ))
-                .collect(Collectors.toList());
+                .map(this::convertToDTO)
+                .toList();
+    }
+
+    private ChannelDTO convertToDTO(Channel channel) {
+        return new ChannelDTO(
+                channel.getId(),
+                channel.getName(),
+                channel.getDescription(),
+                channel.getCreatorId(),
+                channel.isPrivate(),
+                channel.getCreatedAt(),
+                channel.getMembers()
+        );
     }
 }
